--- a/templates/ObjectSerializer.mustache
+++ b/templates/ObjectSerializer.mustache
@@ -281,7 +281,7 @@ class ObjectSerializer
      */
     public static function convertBoolToQueryStringFormat(bool $value): int|string
     {
-        if (Configuration::BOOLEAN_FORMAT_STRING == Configuration::getDefaultConfiguration()->getBooleanFormatForQueryString()) {
+        if (Configuration::BOOLEAN_FORMAT_STRING === Configuration::getDefaultConfiguration()->getBooleanFormatForQueryString()) {
             return $value ? 'true' : 'false';
         }
 
