--- a/templates/model_generic.mustache
+++ b/templates/model_generic.mustache
@@ -446,7 +446,7 @@ class {{classname}} {{#parentSchema}}extends {{{parent}}}{{/parentSchema}}{{^par
         }
 {{/minimum}}
 {{#pattern}}
-        if ({{#isNullable}}!is_null(${{name}}) && {{/isNullable}}(!preg_match("{{{pattern}}}", ${{name}}))) {
+        if ({{#isNullable}}!is_null(${{name}}) && {{/isNullable}}is_string(${{name}} && (!preg_match("{{{pattern}}}", ${{name}}))) {
             throw new \InvalidArgumentException("invalid value for \${{name}} when calling {{classname}}.{{operationId}}, must conform to the pattern {{{pattern}}}.");
         }
 {{/pattern}}
