--- a/templates/ObjectSerializer.mustache
+++ b/templates/ObjectSerializer.mustache
@@ -447,7 +447,7 @@ class ObjectSerializer
             }
         }
 
-        if ($class === \SplFileObject::class) {
+        if ($class === '\SplFileObject') {
             /** @var \Psr\Http\Message\StreamInterface $data */
             $data = Utils::streamFor($data);
 
