--- a/templates/Configuration.mustache
+++ b/templates/Configuration.mustache
@@ -16,7 +16,7 @@ class Configuration
     public const BOOLEAN_FORMAT_INT = 'int';
     public const BOOLEAN_FORMAT_STRING = 'string';
 
-    private static self $defaultConfiguration;
+    private static ?self $defaultConfiguration = null;
 
     /**
      * Associate array to store API key(s)
