--- a/templates/ObjectSerializer.mustache
+++ b/templates/ObjectSerializer.mustache
@@ -376,10 +376,13 @@ class ObjectSerializer
      * @param class-string $class         class name is passed as a string
      * @param string[]     $httpHeaders   HTTP headers
      *
-     * @return null|array|object a single or an array of $class instances
+     * @return null|bool|int|float|string|array|object a single or an array of $class instances
      */
-    public static function deserialize(mixed $data, string $class, ?array $httpHeaders = null): null|array|object
-    {
+    public static function deserialize(
+        mixed $data,
+        string $class,
+        ?array $httpHeaders = null,
+    ): null|bool|int|float|string|array|object {
         if (null === $data) {
             return null;
         }
