--- a/templates/model_generic.mustache
+++ b/templates/model_generic.mustache
@@ -375,7 +375,7 @@ class {{classname}} {{#parentSchema}}extends {{{parent}}}{{/parentSchema}}{{^par
     /**
      * Sets {{name}}
      *
-     * @param {{^required}}null|{{/required}}{{{dataType}}} ${{name}}{{#description}} {{{.}}}{{/description}}{{^description}} {{{name}}}{{/description}}
+     * @param {{#isNullable}}null|{{/isNullable}}{{{dataType}}} ${{name}}{{#description}} {{{.}}}{{/description}}{{^description}} {{{name}}}{{/description}}
 {{#deprecated}}
      *
      * @deprecated
